--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href='//fonts.googleapis.com/css?family=Raleway|Lato' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.css">
+
+
   <!-- <link rel="stylesheet" href="css/styles.css"> -->
 </head>
 
@@ -15,13 +18,16 @@
   <div ui-view class="body-wrapper"></div>
 
   <!-- VENDOR SCRIPTS -->
+  <script src="//code.angularjs.org/1.5.8/angular.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  
-  <script src="//code.angularjs.org/1.5.8/angular.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.min.js"></script>
 
+
+  
+<!--  -->
 
   <!-- LOCAL SCRIPTS -->
   <script src='/controllers/widgetController.js'></script>
