added SASS styling - fixed loan amount starting point bug

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href='//fonts.googleapis.com/css?family=Raleway|Lato' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.css">
+  <link rel="stylesheet" href="css/main.css">
 
 
   <!-- <link rel="stylesheet" href="css/styles.css"> -->
