widget component directive implemented - navbar added

--- a/client/index.html
+++ b/client/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html ng-app="Scholarships">
-<head>
-  <title>Next Gen Vest Code Challenge</title>
-  <meta name="viewport" content="initial-scale=1.0">
-  <meta charset="utf-8">
+  <head>
+    <title>Next Gen Vest Code Challenge</title>
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
 
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href='//fonts.googleapis.com/css?family=Raleway|Lato' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.css">
-  <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href='//fonts.googleapis.com/css?family=Raleway|Lato' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.css">
+    <link rel="stylesheet" href="css/main.css">
 
+  </head>
 
-  <!-- <link rel="stylesheet" href="css/styles.css"> -->
-</head>
+  <body>
 
-<body>
+    <div ui-view class="body-wrapper"></div>
 
-  <div ui-view class="body-wrapper"></div>
-
-  <!-- VENDOR SCRIPTS -->
-  <script src="//code.angularjs.org/1.5.8/angular.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+    <!-- VENDOR SCRIPTS -->
+    <script src="//code.angularjs.org/1.5.8/angular.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.28/LineChart.min.js"></script>
 
+    <!-- LOCAL SCRIPTS -->
+    <script src='/components/loanWidget.js'></script>
+  <!--   <script src='/controllers/formPageController.js'></script> -->
+    <script src="app.js"></script>
 
-  
-<!--  -->
-
-  <!-- LOCAL SCRIPTS -->
-  <script src='/controllers/widgetController.js'></script>
-<!--   <script src='/controllers/formPageController.js'></script> -->
-  <script src="app.js"></script>
-</body>
+  </body>
 </html>
 
 
